<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.skissorswolf.podagetimer.PodAgeTimerWelcome"
    android:background="#ff000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgWelcome"
        android:background="#ff000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/moula2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/FCA"
        android:id="@+id/txtFCA"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffa944" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/URI"
        android:id="@+id/btnURI"
        android:layout_above="@+id/txtFCA"
        android:layout_centerHorizontal="true"
        android:textColor="#ff6ca3ff"
        android:background="#ff000000"
        android:onClick="launchBrowser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/again"
        android:id="@+id/txtAgain"
        android:textColor="#FFFFA944"
        android:layout_alignBottom="@+id/imgWelcome"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/txtTitle"
        android:layout_marginTop="24dp"
        android:textColor="#FFFFA944"
        android:layout_below="@+id/imgWelcome"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/adapted"
        android:id="@+id/txtAdapted"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff8e96" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/me"
        android:id="@+id/txtMe"
        android:layout_below="@+id/txtAdapted"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFF8E96" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/original"
        android:id="@+id/txtOriginal"
        android:textColor="#FFFF8E96"
        android:layout_below="@+id/txtMe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

</RelativeLayout>
